include_directories(../1)
include_directories(../6)

add_executable(Ch10_absInt absInt.cpp)
add_executable(Ch10_accum accum.cpp)
add_executable(Ch10_accum4 accum4.cpp)
add_executable(Ch10_avg_price avg_price.cpp)
add_executable(Ch10_bind2 bind2.cpp)
add_executable(Ch10_elimDups elimDups.cpp)
add_executable(Ch10_equal equal.cpp)
add_executable(Ch10_equiv-istream-iter equiv-istream-iter.cpp)
add_executable(Ch10_inserters inserters.cpp)
add_executable(Ch10_iostream_iter iostream_iter.cpp)
add_executable(Ch10_lambda lambda.cpp)
add_executable(Ch10_newcount-size newcount-size.cpp)
add_executable(Ch10_ostreamIter2 ostreamIter2.cpp)
add_executable(Ch10_rcomma rcomma.cpp)
add_executable(Ch10_rev-iters rev-iters.cpp)
add_executable(Ch10_reverse-iter reverse-iter.cpp)
add_executable(Ch10_reverse reverse.cpp)
add_executable(Ch10_sortSI sortSI.cpp)
add_executable(Ch10_use-istream-iter use-istream-iter.cpp)
add_executable(Ch10_use_find use_find.cpp)

Config_DebugInfo(Ch10_absInt "&lt; data/absInt")
Config_DebugInfo(Ch10_accum "&lt; data/accum")
Config_DebugInfo(Ch10_accum4 "&lt; data/iostream_iter")
Config_DebugInfo(Ch10_avg_price "&lt; data/book_sales")
Config_DebugInfo(Ch10_bind2 "&lt; data/count-size")
Config_DebugInfo(Ch10_elimDups "&lt; data/count-size")
Config_DebugInfo(Ch10_equiv-istream-iter "&lt; data/iostream_iter")
Config_DebugInfo(Ch10_iostream_iter "&lt; data/iostream_iter")
Config_DebugInfo(Ch10_newcount-size "&lt; data/count-size")
Config_DebugInfo(Ch10_ostreamIter2 "&lt; data/iostream_iter")
Config_DebugInfo(Ch10_rcomma "&lt; data/rcomma")
Config_DebugInfo(Ch10_reverse-iter "&lt; data/reverse-iter")
Config_DebugInfo(Ch10_sortSI "&lt; data/book_sales")
Config_DebugInfo(Ch10_use_find "&lt; data/use_find")
Config_DebugInfo(Ch10_use-istream-iter "&lt; data/iostream_iter")