INCLUDE_DIRECTORIES(../6)
INCLUDE_DIRECTORIES(../7)

add_executable(Ch11_erasemap erasemap.cpp)
add_executable(Ch11_map1 map1.cpp ../7/Sales_data.cpp)
add_executable(Ch11_multimap multimap.cpp)
add_executable(Ch11_pair pair.cpp)
add_executable(Ch11_restricted_count restricted_count.cpp)
add_executable(Ch11_setOps setOps.cpp)
add_executable(Ch11_unorderedWordCount unorderedWordCount.cpp)
add_executable(Ch11_wcEx wcEx.cpp)
add_executable(Ch11_word_count word_count.cpp)
add_executable(Ch11_word_transform word_transform.cpp)

Config_DebugInfo(Ch11_wcEx "&lt; data/storyDataFile")
Config_DebugInfo(Ch11_erasemap "&lt; data/storyDataFile")
Config_DebugInfo(Ch11_restricted_count "&lt; data/word_count")
Config_DebugInfo(Ch11_unorderedWordCount "&lt; data/word_count")
Config_DebugInfo(Ch11_word_count "&lt; data/storyDataFile")
Config_DebugInfo(Ch11_pair "&lt; data/storyDataFile")
Config_DebugInfo(Ch11_word_transform "data/rules data/text")