INCLUDE_DIRECTORIES(../14)

add_executable(Ch17_badgetc badgetc.cpp)
add_executable(Ch17_bits bits.cpp)
add_executable(Ch17_ccpgms ccpgms.cpp)
add_executable(Ch17_findbook findbook.cpp ../14/Sales_data.cpp)
add_executable(Ch17_game game.cpp)
add_executable(Ch17_getc getc.cpp)
add_executable(Ch17_getput getput.cpp)
add_executable(Ch17_manips manips.cpp)
add_executable(Ch17_no-skipws no-skipws.cpp)
add_executable(Ch17_normalInts normalInts.cpp)
add_executable(Ch17_phones phones.cpp)
add_executable(Ch17_phonesFinal phonesFinal.cpp)
add_executable(Ch17_point point.cpp)
add_executable(Ch17_prec prec.cpp)
add_executable(Ch17_rand1 rand1.cpp)
add_executable(Ch17_rand2 rand2.cpp)
add_executable(Ch17_rand4 rand4.cpp)
add_executable(Ch17_rand6 rand6.cpp)
add_executable(Ch17_REerrs REerrs.cpp)
add_executable(Ch17_regex1 regex1.cpp)
add_executable(Ch17_seed seed.cpp)
add_executable(Ch17_seek seek.cpp)
add_executable(Ch17_setw setw.cpp)
add_executable(Ch17_skipws skipws.cpp)
add_executable(Ch17_subexpr subexpr.cpp)
add_executable(Ch17_tuple tuple.cpp)
add_executable(Ch17_validatePhones validatePhones.cpp)
add_executable(Ch17_zips zips.cpp)

Config_DebugInfo(Ch17_badgetc "&lt; data/skipws")
Config_DebugInfo(Ch17_bits "&lt; data/bits")
Config_DebugInfo(Ch17_ccpgms "&lt; data/files")
Config_DebugInfo(Ch17_findbook "data/store1 data/store2 data/store3 data/store4")
Config_DebugInfo(Ch17_game "&lt; data/game")
Config_DebugInfo(Ch17_getc "&lt; data/skipws")
Config_DebugInfo(Ch17_getput "&lt; data/skipws")
Config_DebugInfo(Ch17_no-skipws "&lt; data/no-skipws")
Config_DebugInfo(Ch17_phones "&lt; data/phones")
Config_DebugInfo(Ch17_phonesFinal "&lt; data/phonesFinal")
Config_DebugInfo(Ch17_skipws "&lt; data/skipws")
Config_DebugInfo(Ch17_subexpr "&lt; data/files")
Config_DebugInfo(Ch17_validatePhones "&lt; data/validatePhones")