include_directories(../1)
add_executable(Ch03_add_using add_using.cpp)
add_executable(Ch03_arrayScores arrayScores.cpp)
add_executable(Ch03_cctype cctype.cpp)
add_executable(Ch03_char_repl char_repl.cpp)
add_executable(Ch03_cstring_hdr cstring_hdr.cpp)
add_executable(Ch03_getline getline.cpp)
add_executable(Ch03_hexify hexify.cpp)
add_executable(Ch03_multidim multidim.cpp)
add_executable(Ch03_ptr_traversal2 ptr_traversal2.cpp)
add_executable(Ch03_square square.cpp)
add_executable(Ch03_strcompare strcompare.cpp)
add_executable(Ch03_string_add string_add.cpp)
add_executable(Ch03_string_io string_io.cpp)
add_executable(Ch03_string_io2 string_io2.cpp)
add_executable(Ch03_string_size string_size.cpp)
add_executable(Ch03_string_size2 string_size2.cpp)
add_executable(Ch03_string_size3 string_size3.cpp)
add_executable(Ch03_vecScores vecScores.cpp)
add_executable(Ch03_vecStrings2 vecStrings2.cpp)
add_executable(Ch03_vecSubs vecSubs.cpp)
add_executable(Ch03_vec_decls vec_decls.cpp)
add_executable(Ch03_word_echo word_echo.cpp)

Config_DebugInfo(Ch03_add_using "&lt; data/add")
Config_DebugInfo(Ch03_arrayScores "&lt; data/grades")
Config_DebugInfo(Ch03_hexify "&lt; data/hexify")
Config_DebugInfo(Ch03_ptr_traversal2 "&lt; data/ptr_traversal2")
Config_DebugInfo(Ch03_string_io "&lt; data/string_io")
Config_DebugInfo(Ch03_string_io2 "&lt; data/string_io")
Config_DebugInfo(Ch03_vecStrings2 "&lt; data/vecStrings2")
Config_DebugInfo(Ch03_vecScores "&lt; data/grades")
Config_DebugInfo(Ch03_getline "&lt; data/word_echo")
Config_DebugInfo(Ch03_string_size2 "&lt; data/word_echo")
Config_DebugInfo(Ch03_string_size3 "&lt; data/word_echo")
Config_DebugInfo(Ch03_word_echo "&lt; data/word_echo")