include_directories(../2)
add_executable(Ch04_arith-ex arith-ex.cpp)
add_executable(Ch04_arraysizeof arraysizeof.cpp)
add_executable(Ch04_cond cond.cpp)
add_executable(Ch04_incr incr.cpp)
add_executable(Ch04_int-div int-div.cpp)
add_executable(Ch04_oofe oofe.cpp)
add_executable(Ch04_overflow overflow.cpp)
add_executable(Ch04_prec prec.cpp)
add_executable(Ch04_shift-prec shift-prec.cpp)
add_executable(Ch04_sizeof_pgm sizeof_pgm.cpp)
add_executable(Ch04_unaryOps unaryOps.cpp)
add_executable(Ch04_vec_init vec_init.cpp)
add_executable(Ch04_warn_dbltoint warn_dbltoint.cpp)

Config_DebugInfo(Ch04_cond "&lt; data/vecSubs")