WSP4_AddExecute(clientSK clientSK.c)
WSP4_AddExecute(serverSK serverSK.c)
WSP4_AddDLL(command command.c)
WSP4_AddDLL(SendReceiveSKHA SendReceiveSKHA.c)
WSP4_AddDLL(SendReceiveSKST SendReceiveSKST.c)
WSP4_AddExecute(clientSKST clientSKST.c)
target_link_libraries(clientSKST SendReceiveSKST)
WSP4_AddExecute(serverSKHA serverSKHA.c)
target_link_libraries(serverSKHA SendReceiveSKHA)
WSP4_AddExecute(serverSKST serverSKST.c)
target_link_libraries(serverSKST SendReceiveSKST)