cmake_minimum_required(VERSION 2.6.2)

project(CH03)

add_executable(edge_divide edge_divide.cpp Point.cpp)
add_executable(graph_array graph_array.cpp)
add_executable(graph_linklist graph_linklist.cpp)
add_executable(heads heads.cpp)
add_executable(lg lg.cpp)
add_executable(malloc_fail malloc_fail.cpp)
add_executable(math_example math_example.cpp)
add_executable(linklist linklist.cpp)
add_executable(linklist_head linklist_head.cpp)
add_executable(node_client node_client.cpp list.cpp)
add_executable(prime prime.cpp)
add_executable(edge edge.cpp Point.cpp)
add_executable(randNum randNum.cpp)
add_executable(search search.cpp)
add_executable(sort_str sort_str.cpp)