add_executable(Ch01_add add.cpp)
add_executable(Ch01_add_item add_item.cpp)
add_executable(Ch01_add_item2 add_item2.cpp)
add_executable(Ch01_avg_price avg_price.cpp)
add_executable(Ch01_forcount forcount.cpp)
add_executable(Ch01_for_ex for_ex.cpp)
add_executable(Ch01_item_io item_io.cpp)
add_executable(Ch01_main_only main_only.cpp)
add_executable(Ch01_mysum mysum.cpp)
add_executable(Ch01_occurs occurs.cpp)
add_executable(Ch01_whilecount whilecount.cpp)

Config_DebugInfo(Ch01_add "&lt; data/add")
Config_DebugInfo(Ch01_add_item "&lt; data/add_item")
Config_DebugInfo(Ch01_add_item2 "&lt; data/add_item")
Config_DebugInfo(Ch01_avg_price "&lt; data/book_sales")
Config_DebugInfo(Ch01_item_io "&lt; data/book_sales") 
Config_DebugInfo(Ch01_occurs "&lt; data/occurs")
Config_DebugInfo(Ch01_mysum "&lt; data/mysum")