INCLUDE_DIRECTORIES(../6)
INCLUDE_DIRECTORIES(../7)

add_executable(Ch12_allocPtr allocPtr.cpp)
add_executable(Ch12_allocSP allocSP.cpp)
add_executable(Ch12_oknew oknew.cpp)
add_executable(Ch12_querymain querymain.cpp TextQuery.cpp)
add_executable(Ch12_release release.cpp)
add_executable(Ch12_unique unique.cpp)
add_executable(Ch12_UP UP.cpp)
add_executable(Ch12_usealloc usealloc.cpp)
add_executable(Ch12_usealloc2 usealloc2.cpp)
add_executable(Ch12_useBlob useBlob.cpp)
add_executable(Ch12_weak weak.cpp)

Config_DebugInfo(Ch12_querymain "data/storyDataFile &lt; data/Alice")
Config_DebugInfo(Ch12_allocPtr "&lt; data/alloc")
Config_DebugInfo(Ch12_allocSP "&lt; data/alloc")
Config_DebugInfo(Ch12_usealloc "&lt; data/storyDataFile")