include_directories(../1)
add_executable(Ch02_compounddecls compounddecls.cpp)
add_executable(Ch02_convs convs.cpp)
add_executable(Ch02_dbl_ptr dbl_ptr.cpp)
add_executable(Ch02_decl-ex decl-ex.cpp)
add_executable(Ch02_escape escape.cpp)
add_executable(Ch02_inits inits.cpp)
add_executable(Ch02_literals literals.cpp)
add_executable(Ch02_ref-ex ref-ex.cpp)
add_executable(Ch02_Sales_data Sales_data.cpp)
add_executable(Ch02_scope_levels scope_levels.cpp)
add_executable(Ch02_unsigned unsigned.cpp)

Config_DebugInfo(Ch02_Sales_data "&lt; data/add_item")