add_executable(Ch06_arrRet arrRet.cpp)
add_executable(Ch06_count-calls count-calls.cpp)
add_executable(Ch06_errMsg_initList errMsg_initList.cpp)
add_executable(Ch06_fact fact.cpp LocalMath.cpp)
add_executable(Ch06_fcnptrRet fcnptrRet.cpp)
add_executable(Ch06_good_printmain good_printmain.cpp)
add_executable(Ch06_inline_shorter inline_shorter.cpp)
add_executable(Ch06_mainmath mainmath.cpp LocalMath.cpp)
add_executable(Ch06_mainret mainret.cpp)
add_executable(Ch06_mk_plural mk_plural.cpp)
add_executable(Ch06_ref-fcn ref-fcn.cpp)
add_executable(Ch06_refparms refparms.cpp)
add_executable(Ch06_refret-ex refret-ex.cpp)
add_executable(Ch06_reset reset.cpp)
add_executable(Ch06_stl-arr-fcns stl-arr-fcns.cpp)
add_executable(Ch06_usefcnptr usefcnptr.cpp)
add_executable(Ch06_use_mk_plural use_mk_plural.cpp)
add_executable(Ch06_wdebug wdebug.cpp)

Config_DebugInfo(Ch06_mainmath "&lt; data/mainmath")
Config_DebugInfo(Ch06_refparms "&lt; data/refparms")